# SML_Portfolio

./: .agentrules  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  DEVELOPER_MANIFESTO.md  README.md  about.html  aeo.html  affiliate.html  agent-credit-bureau.html  agent-start.html  agent-to-agent-payment.html  agent-wallet.html  agent.md  agents.json  agentswarm-seo.html  ai-seo-agent-os.html  ai.txt  autonomous-agent-payments.html  books.html  cascade.html  central-bank.html  crawltoll.html  feed.xml  ghost-cube.html  gov-procurement.html  graph.json  heatmap.html  hermes.html  http-402-ai-agents.html  index.html  indicators.html  llms-full.txt  llms.txt  marketplace.html  mastersheets.html  mcp-payment-middleware.html  mcp-x402-npm.html  no-fake-trading-data-policy.html  (+30 more)
.well-known/: agent.json  agents.json  ai-plugin.json  ai.txt  mcp.json  openapi.json  security.txt  server.json  vapl.json
AGENT_STANDARDS/: SOVEREIGN_DATA_POLICY.md
agent/: content_factory.py  requirements.txt
agent-economy-os/: index.html
agentcard/: .env.example  Dockerfile  Gemfile  docker-compose.yml  render.yaml
ai/: faq.json  summary.json
api/: agents.js
builds/: index.html
docs/: AGENT_WALLET_DEMO_90S.md  AGENT_WALLET_SHARE_POSTS.md  API_MARKET_THREE_LISTINGS.json  API_MARKET_THREE_LISTINGS.md  GOV_SDVOSB_AGENT_PROCUREMENT.md
downloads/: DOWNLOAD_LINKS.json  agent-wallet-share.html  (+4 more)
vapl/py-sdk/: pyproject.toml
vapl/py-sdk/tests/: test_credentials.py  test_reputation.py  test_security.py
vapl/py-sdk/vapl/: __init__.py
vapl/py-sdk/vapl/integration/: proof402.py
(+534 files in other folders)
