[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vapl-py"
version = "1.0.0"
description = "Verifiable Agent Provenance Layer — Python SDK"
authors = [{ name = "ScriptMasterLabs", email = "dev@scriptmasterlabs.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vapl --cov-report=term-missing --cov-fail-under=90"

[tool.setuptools.packages.find]
where = ["."]  
include = ["vapl*"]
